--- a/figthingforpemstruk/style.css
+++ b/figthingforpemstruk/style.css
@@ -1,5 +1,8 @@
 * {
     box-sizing: border-box;
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;        
 }
 
 #container-canvas{
@@ -16,32 +19,36 @@
 }
 
 #container-canvas .timer{
-    background-color: red; 
+    background-color: black; 
     width: 100px; 
-    height: 100px; 
+    height: 50px; 
     flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
+    border: 4px solid white;
 }
 
 #player {
     position: relative;
-    height: 30px;
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    border-top: 4px solid white;
+    border-left: 4px solid white;
+    border-bottom: 4px solid white;
 }
 
 #player .player-health{
-    background-color: yellow; 
+    background-color: red; 
     height: 30px;
     width: 100%;
 }
 
 #player .player-health2{
     position: absolute;
-    background: blue;
+    background: #818CF8;
     top: 0;
     right: 0;
     bottom: 0;
@@ -50,18 +57,20 @@
 
 #enemy{
     position: relative;
-    height: 30px;
     width: 100%;
+    border-top: 4px solid white;
+    border-right: 4px solid white;
+    border-bottom: 4px solid white;
 }
 
 #enemy .enemy-health{
-    background-color: yellow; 
+    background-color: red; 
     height: 30px;
 }
 
 #enemy .enemy-health2{
     position: absolute;
-    background: blue;
+    background: #818CF8;
     top: 0;
     right: 0;
     bottom: 0;
